--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -1,17 +1,17 @@
 body {
-    /* background-image: url("../images/AnimalKingdom.png"); */
-    width: 100%;
-    font-size: 62.5%;
-  }
-  
-  * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    color: #333;
-  }
+  /* background-image: url("../images/AnimalKingdom.png"); */
+  width: 100%;
+  font-size: 62.5%;
+}
 
-  h1 {
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  color: #333;
+}
+
+h1 {
   margin-bottom: 1rem;
 }
 
@@ -24,76 +24,74 @@ h1 {
 }
 
 h2 {
-  font-size: 2.0rem;
+  font-size: 2rem;
   font-weight: 400;
   font-family: cursive;
 }
 
 .container {
-    width: 50vw;
-    display: flex;
-    justify-content: center;
-    align-items: start;
-    max-width: 50rem;
-    margin: 0 auto;
-  }
-  
-  .flex-column {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .flex-center {
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .justify-center {
-    justify-content: center;
-  }
-  
-  .text-center {
-    text-align: center;
-  }
-
-  #inputBox {
-    display: flex;
-    margin-bottom: 1rem;
-    width: 30rem;
-    font-size: 1.8rem;
-    border: 0.1rem solid whitesmoke;
-    background-color: whitesmoke;
-    padding: 1rem;
-  }
-  
-
-  button {
-    font-size: 1.5rem;
-    padding: .5rem 1rem;
-    width: 10rem;
-    text-align: center;
-    border: 0.1rem solid whitesmoke;
-    margin-bottom: 1rem;
-    color: whitesmoke;
-    background-color:rgb(47, 96, 170);
-    text-align: center;
-  }
-  
-  button:hover {
-    cursor: pointer;
-    box-shadow: 0 0.4rem 1.4rem 0 rgb(62, 174, 202);
-    transform: translateY(-0.1rem);
-    transition: transform 150ms;
-  }
-
-
-#exampleBtn, #animalZone {
-  width: 200vw;
-  display: flex ;
-  flex-wrap: wrap;
+  width: 50vw;
+  display: flex;
   justify-content: center;
   align-items: start;
   max-width: 50rem;
   margin: 0 auto;
 }
 
+.flex-column {
+  display: flex;
+  flex-direction: column;
+}
+
+.flex-center {
+  justify-content: center;
+  align-items: center;
+}
+
+.justify-center {
+  justify-content: center;
+}
+
+.text-center {
+  text-align: center;
+}
+
+#inputBox {
+  display: flex;
+  margin-bottom: 1rem;
+  width: 30rem;
+  font-size: 1.8rem;
+  border: 0.1rem solid whitesmoke;
+  background-color: whitesmoke;
+  padding: 1rem;
+}
+
+button {
+  font-size: 1.5rem;
+  padding: 0.5rem 1rem;
+  width: 10rem;
+  text-align: center;
+  border: 0.1rem solid whitesmoke;
+  margin-bottom: 1rem;
+  color: whitesmoke;
+  background-color: rgb(47, 96, 170);
+  text-align: center;
+}
+
+button:hover {
+  cursor: pointer;
+  box-shadow: 0 0.4rem 1.4rem 0 rgb(62, 174, 202);
+  transform: translateY(-0.1rem);
+  transition: transform 150ms;
+}
+
+#exampleBtn,
+#animalZone {
+  width: 200vw;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: start;
+  max-width: 50rem;
+  margin: 0 auto;
+}
